--- a/src/cabinets.Core/Pages/Profile/ProfilePage.xaml
+++ b/src/cabinets.Core/Pages/Profile/ProfilePage.xaml
@@ -56,6 +56,8 @@
                     </ListView.ItemTemplate>
                 </ListView>
             </StackLayout>
+
+            <Button Text="Выход" Command="{Binding LogoutCommand}"/>
         </StackLayout>
     </ContentPage.Content>
 </views:MvxContentPage>
