--- a/src/cabinets.Core/Pages/Auth/PolicyPage.xaml
+++ b/src/cabinets.Core/Pages/Auth/PolicyPage.xaml
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<views:MvxContentPage x:TypeArguments="auth:PolicyViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
+             xmlns:auth="clr-namespace:cabinets.Core.ViewModels.Auth;assembly=cabinets.Core"
              mc:Ignorable="d"
-             x:Class="cabinets.Pages.PolicyPage"
+             x:Class="cabinets.Core.Pages.Auth.PolicyPage"
              Title="Политика">
     <ContentPage.Content>
         <!--Страница политики-->
@@ -24,4 +26,4 @@
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
-</ContentPage>
+</views:MvxContentPage>
