--- a/src/cabinets.Core/Pages/Auth/TwoButtonPage.xaml
+++ b/src/cabinets.Core/Pages/Auth/TwoButtonPage.xaml
@@ -1,16 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<views:MvxContentPage x:TypeArguments="auth:TwoButtonViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
+             xmlns:auth="clr-namespace:cabinets.Core.ViewModels.Auth;assembly=cabinets.Core"
              mc:Ignorable="d"
-             x:Class="cabinets.Pages.TwoButtonPage"
+             x:Class="cabinets.Core.Pages.Auth.TwoButtonPage"
              NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
         <!--Страница после регистрации-->
         <StackLayout VerticalOptions="Center" Margin="15,0" Spacing="0">
-            <Button Text="Выбрать кабинет" Style="{StaticResource ButtonTransparent}" Margin="0,10" Clicked="Button_Clicked"></Button>
-            <Button Text="Выбрать дату и время" Style="{StaticResource ButtonTransparent}" Clicked="Button_Clicked_1"></Button>
+            <Button Text="Выбрать кабинет" Style="{StaticResource ButtonTransparent}" Margin="0,10" Command="{Binding OpenCabinetsCommand}"></Button>
+            <Button Text="Выбрать дату и время" Style="{StaticResource ButtonTransparent}" Command="{Binding OpenCalendarCommand}"></Button>
         </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</views:MvxContentPage>
