--- a/src/cabinets.Core/Pages/News/NewsDetailPage.xaml
+++ b/src/cabinets.Core/Pages/News/NewsDetailPage.xaml
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<views:MvxContentPage x:TypeArguments="news:NewsDetailViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
+             xmlns:news="clr-namespace:cabinets.Core.ViewModels.News;assembly=cabinets.Core"
+             xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              mc:Ignorable="d"
-             x:Class="cabinets.Pages.NewsDetailPage"
+             x:Class="cabinets.Core.Pages.News.NewsDetailPage"
              Title="Новости">
     <ContentPage.Content>
         <!--Детальная страница новостей-->
@@ -18,10 +21,10 @@
                         </Style>
                     </ResourceDictionary>
                 </StackLayout.Resources>
-                <Image Source="pic_news.png" Margin="0,5" HorizontalOptions="Center"/>
-                <Label Text="Уважаемые коллеги" Style="{StaticResource Label}"/>
-                <Label Text="Команда @arendapsy от всей души поздравляет Вас с Днем психолога! Желаем вам удачи, сил, энергии, профессионального и личностного роста!&#10;&#10;Сегодня мы обсудим самые популярные вопросы к психологам, которые клиенты хотят задать, но, к сожалению, не решаются:&#10;&#10;1. Как понять, что я начал сходить с ума? У каждого из нас были моменты, когда нам казалось, что что-то с нами не так (или не казалось)&#10;&#10;2. У психологов бывают психологические проблемы? Психологи – такие же люди, как и все остальные, с такими же кризисами, конфликтами и переживаниями. Просто мы знаем, как проблему распознать и работать с ней.&#10;&#10;3. Вы рассказываете о своих пациентах друзьям? Нечистоплотные люди встречаются в любой профессии, и, к счастью, в психологии это скорее исключение, чем правило.&#10;&#10;4. Вы ведь работали с такими же случаями. Почему вы просто сразу не дадите совет? Потому что психолог дает удочку, а не рыбу.&#10;&#10;5. Вы будете смеяться надо мной, когда я уйду? Хорошие психологи – это еще и отличные эмпаты, поэтому ваше состояние, от которого вы страдаете, никогда не станет поводом для издевок и шуток." Style="{StaticResource Label}"></Label>
+                <forms:CachedImage Source="{Binding News.Image}" Margin="0,5" HorizontalOptions="Center"/>
+                <Label Text="{Binding News.Title}" Style="{StaticResource Label}"/>
+                <Label Text="{Binding News.DetailText}" Style="{StaticResource Label}"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
-</ContentPage>
+</views:MvxContentPage>
