--- a/src/cabinets.Core/Views/CabinetsViewCell.xaml
+++ b/src/cabinets.Core/Views/CabinetsViewCell.xaml
@@ -26,26 +26,17 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Frame IsClippedToBounds="True" Padding="0" CornerRadius="1" HasShadow="False">
-                <Image Source="{Binding Image}" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center" Margin="5"/>
+                <Image Source="{Binding PhotoSource}" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center" Margin="5"/>
             </Frame>
             <StackLayout Grid.Column="1" VerticalOptions="Center" Spacing="0">
-                <Label TextColor="#505050">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="Кабинет "/>
-                                <Span Text="{Binding Number}"/>
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
+                <Label Text="{Binding Name}" TextColor="#505050"/>
                 <StackLayout Orientation="Horizontal" Margin="0,0,10,0">
                     <Label Style="{StaticResource Label}">
                         <Label.FormattedText>
                             <FormattedString>
                                 <FormattedString.Spans>
                                     <Span Text="Вместимость: до "/>
-                                    <Span Text="{Binding Сapacity}"/>
+                                    <Span Text="{Binding Capacity}"/>
                                     <Span Text=" чел"/>
                                 </FormattedString.Spans>
                             </FormattedString>
@@ -56,7 +47,7 @@
                             <FormattedString>
                                 <FormattedString.Spans>
                                     <Span Text="Площадь: "/>
-                                    <Span Text="{Binding Square}"/>
+                                    <Span Text="{Binding Area}"/>
                                     <Span Text="м²"/>
                                 </FormattedString.Spans>
                             </FormattedString>
@@ -65,8 +56,8 @@
                 </StackLayout>
                 <Label Text="Для индивидуальных и групповых занятий семейной психотерапии, психодиагностики Для индивидуальных и групповых занятий семейной психотерапии, психодиагностики" Style="{StaticResource Label}" Margin="0,0,10,0" MaxLines="2" LineBreakMode="TailTruncation"/>
             </StackLayout>
-            <BoxView Style="{StaticResource BoxView}" WidthRequest="10" HeightRequest="20" BackgroundColor="{Binding BoxColor}" Margin="0,0,10,0"/>
-            <BoxView Style="{StaticResource BoxView}" WidthRequest="8" HeightRequest="8" BackgroundColor="White" Margin="0,17,11,0" Rotation="-45"/>
+            <BoxView Grid.Column="0" Style="{StaticResource BoxView}" WidthRequest="10" HeightRequest="20" BackgroundColor="{Binding BoxColor}" Margin="0,0,10,0"/>
+            <BoxView Grid.Column="0" Style="{StaticResource BoxView}" WidthRequest="8" HeightRequest="8" BackgroundColor="White" Margin="0,17,11,0" Rotation="-45"/>
         </Grid>
   </ViewCell.View>
 </ViewCell>
