--- a/src/cabinets.Core/Pages/Cabinets/BookingPage.xaml
+++ b/src/cabinets.Core/Pages/Cabinets/BookingPage.xaml
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<views:MvxContentPage x:TypeArguments="cabinets:BookingViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:calendar="clr-namespace:cabinets.Views"
              xmlns:viewCell="clr-namespace:cabinets.Views"
+             xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
+             xmlns:cabinets="clr-namespace:cabinets.Core.ViewModels.Cabinets;assembly=cabinets.Core"
+             xmlns:views1="clr-namespace:cabinets.Core.Views;assembly=cabinets.Core"
              mc:Ignorable="d"
-             x:Class="cabinets.Pages.BookingPage"
-             Title="Кабинет 5">
+             x:Class="cabinets.Core.Pages.Cabinets.BookingPage"
+             Title="{Binding Cabinet.Name}">
     <ContentPage.Content>
         <!--Страница кабинета с календарем-->
         <ScrollView>
@@ -21,7 +24,7 @@
                         </Style>
                     </ResourceDictionary>
                 </StackLayout.Resources>
-                <calendar:CalendarView/>
+                <views1:CalendarView/>
                 <StackLayout Margin="15,0">
                     <Label FontSize="12" Text="Свободное время"/>
                     <Grid>
@@ -29,34 +32,34 @@
                             <ColumnDefinition Width="140"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <ListView HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None" HeightRequest="180" Grid.Column="0" ItemTapped="ListView_ItemTapped">
-                            <ListView.ItemsSource>
-                                <x:String>000000</x:String>
-                            </ListView.ItemsSource>
+                        <views:MvxListView HasUnevenRows="True"
+                                  SelectionMode="None"
+                                  SeparatorVisibility="None"
+                                  HeightRequest="180"
+                                  Grid.Column="0"
+                                  ItemsSource="{Binding Times}">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
-                                    <viewCell:TimeViewCell/>
+                                    <views:MvxViewCell>
+                                        <Frame Style="{StaticResource FrameLabel}" Margin="0,5">
+                                            <Frame.GestureRecognizers>
+                                                <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped"/>
+                                            </Frame.GestureRecognizers>
+                                            <Label Text="{Binding .}" TextColor="#505050" HorizontalOptions="Center" VerticalOptions="Center"/>
+                                        </Frame>
+                                    </views:MvxViewCell>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
-                        </ListView>
+                        </views:MvxListView>
                         <StackLayout Grid.Column="1" VerticalOptions="Center" HorizontalOptions="Center">
-                            <Label TextColor="#505050" HorizontalOptions="Center">
-                                <Label.FormattedText>
-                                    <FormattedString>
-                                        <FormattedString.Spans>
-                                            <Span Text="Кабинет №"/>
-                                            <Span Text="5"/>
-                                        </FormattedString.Spans>
-                                    </FormattedString>
-                                </Label.FormattedText>
-                            </Label>
-                            <Label Text="12 января 2019" TextColor="#505050" HorizontalOptions="Center"/>
+                            <Label TextColor="#505050" HorizontalOptions="Center" Text="{Binding Cabinet.Name}"/>
+                            <Label Text="{Binding SelectedDate, StringFormat='{}{0:D}'}" TextColor="#505050" HorizontalOptions="Center"/>
                             <Label Text="Выберите время" TextColor="#505050" HorizontalOptions="Center"/>
-                            <Label x:Name="Price" TextColor="#505050" HorizontalOptions="Center" IsVisible="False">
+                            <Label x:Name="Price" TextColor="#505050" HorizontalOptions="Center">
                                 <Label.FormattedText>
                                     <FormattedString>
                                         <FormattedString.Spans>
-                                            <Span Text="450"/>
+                                            <Span Text="{Binding Cabinet.Price}"/>
                                             <Span Text=" рублей/час"/>
                                         </FormattedString.Spans>
                                     </FormattedString>
@@ -65,11 +68,11 @@
                         </StackLayout>
                     </Grid>
                     <StackLayout Spacing="0">
-                        <Button x:Name="Booking" Text="Забронировать" Style="{StaticResource ButtonBlur}" IsEnabled="False" Opacity="0.6"/>
-                        <Button Text="К списку кабинетов" Style="{StaticResource ButtonTransparent}" Margin="0,10" Clicked="Button_Clicked"/>
+                        <Button Text="Забронировать" Style="{StaticResource ButtonBlur}" IsEnabled="{Binding IsReservationEnabled}" Command="{Binding ReservationCommand}" Opacity="0.6"/>
+                        <Button Text="К списку кабинетов" Style="{StaticResource ButtonTransparent}" Margin="0,10" Command="{Binding BackCommand}"/>
                     </StackLayout>
                 </StackLayout>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
-</ContentPage>
+</views:MvxContentPage>
