--- a/src/cabinets.Core/Pages/Cabinets/CabinetsDetailPage.xaml
+++ b/src/cabinets.Core/Pages/Cabinets/CabinetsDetailPage.xaml
@@ -6,6 +6,7 @@
              xmlns:contentView="clr-namespace:cabinets.ContentViews"
              xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
              xmlns:cabinets="clr-namespace:cabinets.Core.ViewModels.Cabinets;assembly=cabinets.Core"
+             xmlns:contentViews="clr-namespace:cabinets.Core.ContentViews;assembly=cabinets.Core"
              mc:Ignorable="d"
              x:Class="cabinets.Core.Pages.Cabinets.CabinetsDetailPage"
              Title="{Binding Cabinet.Name}">
@@ -13,16 +14,13 @@
         <!--Детальная страница кабинета-->
         <ScrollView Margin="15,10" VerticalScrollBarVisibility="Never">
             <StackLayout>
-                <CarouselView HeightRequest="170">
+                <CarouselView HeightRequest="170" ItemsSource="{Binding Cabinet.DetailPictureSources}">
                     <CarouselView.ItemsLayout>
                         <LinearItemsLayout Orientation="Horizontal" ItemSpacing="70"/>
                     </CarouselView.ItemsLayout>
-                    <CarouselView.ItemsSource>
-                        <x:String>000</x:String>
-                    </CarouselView.ItemsSource>
                     <CarouselView.ItemTemplate>
                         <DataTemplate>
-                            <contentView:CarouselContenView/>
+                            <contentViews:CarouselContentView/>
                         </DataTemplate>
                     </CarouselView.ItemTemplate>
                 </CarouselView>
@@ -53,8 +51,8 @@
                 </StackLayout>
                 <Label Text="{Binding Cabinet.Description}" TextColor="#505050" FontSize="12"/>
                 <StackLayout Spacing="0">
-                    <Button Text="Выбрать дату и время" Margin="0,10" Style="{StaticResource ButtonBlur}" Clicked="Button_Clicked_1"/>
-                    <Button Text="К списку кабинетов" Style="{StaticResource ButtonTransparent}" Clicked="Button_Clicked"/>
+                    <Button Text="Выбрать дату и время" Margin="0,10" Style="{StaticResource ButtonBlur}" Command="{Binding OpenBookingCommand}"/>
+                    <Button Text="К списку кабинетов" Style="{StaticResource ButtonTransparent}" Command="{Binding BackCommand}"/>
                 </StackLayout>
             </StackLayout>
         </ScrollView>
