--- a/src/cabinets.Core/Views/TimeViewCell.xaml
+++ b/src/cabinets.Core/Views/TimeViewCell.xaml
@@ -1,13 +1,17 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ViewCell xmlns="http://xamarin.com/schemas/2014/forms" 
+<views:MvxViewCell xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
              mc:Ignorable="d"
-             x:Class="cabinets.Views.TimeViewCell">
+             x:Class="cabinets.Core.Views.TimeViewCell">
   <ViewCell.View>
         <Frame Style="{StaticResource FrameLabel}" Margin="0,5">
-            <Label Text="12.00 - 13.00" TextColor="#505050" HorizontalOptions="Center" VerticalOptions="Center"/>
+            <Frame.GestureRecognizers>
+                <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped"/>
+            </Frame.GestureRecognizers>
+            <Label Text="{Binding .}" TextColor="#505050" HorizontalOptions="Center" VerticalOptions="Center"/>
         </Frame>
     </ViewCell.View>
-</ViewCell>
+</views:MvxViewCell>
