--- a/src/cabinets.Core/Pages/Cabinets/CabinetsPage.xaml
+++ b/src/cabinets.Core/Pages/Cabinets/CabinetsPage.xaml
@@ -10,8 +10,14 @@
              mc:Ignorable="d"
              x:Class="cabinets.Core.Pages.Cabinets.CabinetsPage"
              d:NavigationPage.HasNavigationBar="True"
-             IconImageSource="ic_home"
              Title="Кабинеты">
+    <views:MvxContentPage.IconImageSource>
+        <OnPlatform x:TypeArguments="ImageSource">
+            <On Platform="iOS" Value="outline_home_black_24pt_1x.png"/>
+            <On Platform="Android" Value="ic_home.png"/>
+        </OnPlatform>
+    </views:MvxContentPage.IconImageSource>
+
     <ContentPage.Content>
         <!--Страница кабинеты-->
         <views:MvxListView Margin="15,5"
