--- a/src/cabinets.Core/Pages/Profile/MyBookingPage.xaml
+++ b/src/cabinets.Core/Pages/Profile/MyBookingPage.xaml
@@ -1,23 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<views:MvxContentPage x:TypeArguments="profile:MyBookingViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:contentView="clr-namespace:cabinets.ContentViews"
+             xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
+             xmlns:profile="clr-namespace:cabinets.Core.ViewModels.Profile;assembly=cabinets.Core"
+             xmlns:controls="clr-namespace:cabinets.Core.Controls;assembly=cabinets.Core"
              mc:Ignorable="d"
-             x:Class="cabinets.Pages.MyBookingPage"
+             x:Class="cabinets.Core.Pages.Profile.MyBookingPage"
              Title="Мои бронирования">
     <ContentPage.Content>
         <!--Страница мои бронирования-->
-        <StackLayout>
+        <ScrollView>
             <StackLayout Margin="0,10" BackgroundColor="#ffffff" Padding="20">
-                <Label Text="Пушкин Александр Сергеевич" FontSize="16" TextColor="#505050"/>
+                <Label Text="{Binding User.Name}" FontSize="16" TextColor="#505050"/>
                 <Label>
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
                                 <Span Text="Телефон: "/>
-                                <Span Text="8(922)783-33-33"/>
+                                <Span Text="{Binding User.Phone}"/>
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
@@ -27,25 +30,27 @@
                         <FormattedString>
                             <FormattedString.Spans>
                                 <Span Text="E-mail: "></Span>
-                                <Span Text="AlexSerg@gmail.com"></Span>
+                                <Span Text="{Binding User.Email}"></Span>
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
                 <Grid>
                     <StackLayout x:Name="FirstContentView" IsVisible="True">
-                        <Label TextColor="#505050">
-                            <Label.FormattedText>
-                                <FormattedString>
-                                    <FormattedString.Spans>
-                                        <Span Text="Кабинет "/>
-                                        <Span Text="2"/>
-                                    </FormattedString.Spans>
-                                </FormattedString>
-                            </Label.FormattedText>
-                        </Label>
-                        <Label Text="18.12.2019" TextColor="#505050"/>
-                        <Label Text="17.00 - 18.00" TextColor="#505050"/>
+                        <Label TextColor="#505050" Text="{Binding Reservation.Cabinet.Name}"/>
+                        <Label Text="{Binding Date, StringFormat='{}{0:dd.MM.yyyy}'}" TextColor="#505050"/>
+                        
+                        <controls:RepeaterView
+                            ItemsSource="{Binding Reservation.Times}">
+                            <controls:RepeaterView.ItemTemplate>
+                                <DataTemplate>
+                                    <views:MvxViewCell>
+                                        <Label Text="{Binding .}" TextColor="#505050"/>
+                                    </views:MvxViewCell>
+                                </DataTemplate>
+                            </controls:RepeaterView.ItemTemplate>
+                        </controls:RepeaterView>
+
                         <StackLayout Spacing="0" Margin="0,10">
                             <Button Text="Редактировать запись" Style="{StaticResource ButtonBlur}" Clicked="Button_Clicked"/>
                             <Button Text="Отменить запись" Style="{StaticResource ButtonTransparent}" Margin="0,10" Clicked="Button_Clicked_1"/>
@@ -54,6 +59,6 @@
                     <contentView:EditContentView x:Name="EditContentView" IsVisible="False"/>
                 </Grid>
             </StackLayout>
-        </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
-</ContentPage>
+</views:MvxContentPage>
