--- a/src/cabinets.Core/Views/BookingsViewCell.xaml
+++ b/src/cabinets.Core/Views/BookingsViewCell.xaml
@@ -8,18 +8,12 @@
   <ViewCell.View>
       <!--Ячейка представления для списка мои бронирования в профиле-->
       <StackLayout Orientation="Horizontal">
-            <Label Text="{Binding Date}" TextColor="#505050" HorizontalOptions="Start"/>
-            <Label TextColor="#505050" HorizontalOptions="EndAndExpand" FontSize="10" VerticalOptions="Center">
-                <Label.FormattedText>
-                    <FormattedString>
-                        <FormattedString.Spans>
-                            <Span Text="Кабинет "/>
-                            <Span Text="{Binding Number}"/>
-                        </FormattedString.Spans>
-                    </FormattedString>
-                </Label.FormattedText>
-            </Label>
-            <Image Source="ic_shape.png" WidthRequest="8" HeightRequest="12" HorizontalOptions="End" VerticalOptions="Center"/>
+            <Label Text="{Binding Date, StringFormat='{}{0:dd.MM.yyyy}'}" TextColor="#505050" HorizontalOptions="Start"/>
+            <Label TextColor="#505050" HorizontalOptions="EndAndExpand"
+                   FontSize="10" VerticalOptions="Center" Text="{Binding Cabinet.Name}"/>
+                <Image Source="ic_shape.png"
+                       WidthRequest="8"
+                       HeightRequest="12" HorizontalOptions="End" VerticalOptions="Center"/>
         </StackLayout>
   </ViewCell.View>
 </ViewCell>
