--- a/src/cabinets.Core/Pages/Cabinets/BookingPage.xaml
+++ b/src/cabinets.Core/Pages/Cabinets/BookingPage.xaml
@@ -3,8 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:calendar="clr-namespace:cabinets.Views"
-             xmlns:viewCell="clr-namespace:cabinets.Views"
              xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
              xmlns:cabinets="clr-namespace:cabinets.Core.ViewModels.Cabinets;assembly=cabinets.Core"
              xmlns:views1="clr-namespace:cabinets.Core.Views;assembly=cabinets.Core"
@@ -45,7 +43,7 @@
                                             <Frame.GestureRecognizers>
                                                 <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped"/>
                                             </Frame.GestureRecognizers>
-                                            <Label Text="{Binding .}" TextColor="#505050" HorizontalOptions="Center" VerticalOptions="Center"/>
+                                            <Label Text="{Binding Value}" TextColor="#505050" HorizontalOptions="Center" VerticalOptions="Center"/>
                                         </Frame>
                                     </views:MvxViewCell>
                                 </DataTemplate>
